# dialog

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/dialog/: __init__.py  audio_capture.py  dialog_loop.py  dictation_daemon.py  main.py  transcriber.py  tts_engine.py
src/dialog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_dialog_loop.py  test_transcriber.py
