[project]
name = "dialog"
version = "0.1.0"
description = "My uv-powered project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "faster-whisper>=1.0.0",
    "numpy>=1.26",
    "pynput>=1.8.1",
    "sounddevice>=0.4",
    "pyttsx3>=2.90",
]

[project.scripts]
dialog = "dialog.main:main"


[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
